--- a/clusters/cluster-8qp82/patches/openshift-virtualization-operator/kustomization.yaml
+++ b/clusters/cluster-8qp82/patches/openshift-virtualization-operator/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ../../../components/openshift-virtualization-operator
 
 patches:
-  - path: patches/patch-operator-policy.yaml
+  - path: patch-operator-policy.yaml
 
