--- a/clusters/cluster-8qp82/patches/acm-operator/kustomization.yaml
+++ b/clusters/cluster-8qp82/patches/acm-operator/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ../../../components/acm-operator
 
 patches:
-  - path: patches/patch-subscription.yaml
+  - path: patch-subscription.yaml
 
