fix eso namespace

--- a/clusters/cluster-8qp82/external-secrets-operator-app.yaml
+++ b/clusters/cluster-8qp82/external-secrets-operator-app.yaml
@@ -13,7 +13,7 @@ spec:
     path: components/cluster-8qp82/external-secrets-operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: openshift-operators
+    namespace: external-secrets-operator
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
