disable all apps for testing

--- a/clusters/cluster-8qp82/kustomization.yaml
+++ b/clusters/cluster-8qp82/kustomization.yaml
@@ -3,9 +3,11 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
-  - acm-operator-app.yaml
-  - acm-instance-app.yaml
-  - cluster-standards-app.yaml
+  # - acm-operator-app.yaml
+  # - acm-instance-app.yaml
+  # - cluster-standards-app.yaml
+
+
   # - compliance-operator-app.yaml
   # - external-secrets-operator-app.yaml
   # - openshift-virtualization-instance-app.yaml
