enable acm and cluster standards on 8qp

--- a/clusters/cluster-8qp82/kustomization.yaml
+++ b/clusters/cluster-8qp82/kustomization.yaml
@@ -3,9 +3,10 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
-  # - acm-operator-app.yaml
-  # - acm-instance-app.yaml
-  # - cluster-standards-app.yaml
+  - cluster-standards-app.yaml
+  - acm-operator-app.yaml
+  - acm-instance-app.yaml
+
 
 
   # - compliance-operator-app.yaml
