--- a/clusters/cluster-pq7kv/patches/node-health-operators/kustomization.yaml
+++ b/clusters/cluster-pq7kv/patches/node-health-operators/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../components/node-health-operators
+  - ../../../../components/node-health-operators
 
 patches:
   - path: patch-operator-policies.yaml
