--- a/clusters/cluster-8qp82/patches/acm-operator/patch-subscription.yaml
+++ b/clusters/cluster-8qp82/patches/acm-operator/patch-subscription.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy.open-cluster-management.io/v1beta1
 kind: OperatorPolicy
 metadata:
-  name: compliance-operator
+  name: acm-operator
   namespace: open-cluster-management-policies
 spec:
   channel: release-2.15  # This overrides the "CHANNEL" placeholder in base
