--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
-#   - cluster-standards-app.yaml
-#   - openshift-virtualization-instance-app.yaml
-#   - openshift-virtualization-operator-app.yaml
+  - cluster-standards-app.yaml
+  - openshift-virtualization-instance-app.yaml
+  - openshift-virtualization-operator-app.yaml
 # #  - compliance-operator-app.yaml
 # #  - external-secrets-operator-app.yaml
 #   - node-health-operators-app.yaml
