--- a/clusters/cluster-pq7kv/patches/external-secrets-operator/patch-operator-policy.yaml
+++ b/clusters/cluster-pq7kv/patches/external-secrets-operator/patch-operator-policy.yaml
@@ -6,4 +6,6 @@ metadata:
 spec:
   subscription:
     channel: stable-v1
-    startingCSV: external-secrets-operator.v1.0.0  
+    startingCSV: external-secrets-operator.v1.0.0
+  versions:
+    - external-secrets-operator.v1.0.0
