--- a/clusters/cluster-pq7kv/patches/node-health-operators/patch-operator-policies.yaml
+++ b/clusters/cluster-pq7kv/patches/node-health-operators/patch-operator-policies.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   subscription:
     startingCSV: node-healthcheck-operator.v0.10.1
+  versions:
+    - node-healthcheck-operator.v0.10.1   
 ---
 apiVersion: policy.open-cluster-management.io/v1beta1
 kind: OperatorPolicy
@@ -15,6 +17,8 @@ metadata:
 spec:
   subscription:
     startingCSV: node-maintenance-operator.v5.5.0
+  versions:
+    - node-maintenance-operator.v5.5.0    
 ---
 apiVersion: policy.open-cluster-management.io/v1beta1
 kind: OperatorPolicy
@@ -24,4 +28,6 @@ metadata:
 spec:
   subscription:
     startingCSV: fence-agents-remediation.v0.6.0
+  versions:
+    - fence-agents-remediation.v0.6.0
 ---
