--- a/clusters/cluster-pq7kv/patches/openshift-virtualization-operator/patch-operator-policy.yaml
+++ b/clusters/cluster-pq7kv/patches/openshift-virtualization-operator/patch-operator-policy.yaml
@@ -6,3 +6,5 @@ metadata:
 spec:
   subscription:
     startingCSV: kubevirt-hyperconverged-operator.v4.20.7 
+  versions:
+    - kubevirt-hyperconverged-operator.v4.20.7
