--- a/components/external-secrets-operator/external-secrets-operator.yaml
+++ b/components/external-secrets-operator/external-secrets-operator.yaml
@@ -27,11 +27,11 @@ spec:
     targetNamespaces:
       - external-secrets-operator
   subscription:
-    channel: CHANNEL # This is the placeholder we will patch
+    channel: PATCHME # This is the placeholder we will patch
     name: external-secrets-operator
     namespace: external-secrets-operator
     source: redhat-operators
     sourceNamespace: openshift-marketplace
     startingCSV: PATCHME
   versions:
-    - external-secrets-operator.v1.0.0  
+    - PATCHME  
