--- a/clusters/cluster-8qp82/patches/acm-operator/patch-subscription.yaml
+++ b/clusters/cluster-8qp82/patches/acm-operator/patch-subscription.yaml
@@ -4,5 +4,5 @@ metadata:
   name: advanced-cluster-management
   namespace: open-cluster-management
 spec:
-  channel: release-2.15  # This overrides the "CHANNEL" placeholder in base
+  channel: release-2.15
   
