--- a/components/acm-operator/subscription.yaml
+++ b/components/acm-operator/subscription.yaml
@@ -5,7 +5,7 @@ metadata:
   name: advanced-cluster-management
   namespace: open-cluster-management
 spec:
-  channel: CHANNEL
+  channel: PATCHME
   installPlanApproval: Automatic
   name: advanced-cluster-management
   source: redhat-operators
