--- a/components/node-health-operators/node-maintenance-operator.yaml
+++ b/components/node-health-operators/node-maintenance-operator.yaml
@@ -27,4 +27,4 @@ spec:
     sourceNamespace: openshift-marketplace
     startingCSV: PATCHME
   versions: 
-    - node-maintenance-operator.v5.5.0
+    - PATCHME
