--- a/clusters/cluster-pq7kv/apps/kustomization.yaml
+++ b/clusters/cluster-pq7kv/apps/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - appprojects.yaml
   - cluster-standards-app.yaml
+  - acm-operator-app.yaml
+  - acm-instance-app.yaml  
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
 # #  - compliance-operator-app.yaml
