--- a/clusters/cluster-pq7kv/overlays/node-health-instances/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/node-health-instances/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - ../../../../components/node-health-instances
 
-patches:
+overlays:
   - path: patch-operator-instances.yaml
 
