--- a/clusters/cluster-pq7kv/overlays/node-health-operators/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/node-health-operators/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - ../../../../components/node-health-operators
 
-patches:
+overlays:
   - path: patch-operator-policies.yaml
 
