--- a/clusters/cluster-8qp82/apps/acm-operator-app.yaml
+++ b/clusters/cluster-8qp82/apps/acm-operator-app.yaml
@@ -1,19 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: compliance-operator
+  name: acm-operator
   namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
-    path: clusters/cluster-pq7kv/patches/compliance-operator # Points to local overlay
+    # path:
+    # point to components/<component-name> if nothing needs to be patched
+    # point to clusters/<cluster-name>/<component-name> to apply cluster specific patch
+    path: clusters/cluster-8qp82/overlays/acm-operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: open-cluster-management-policies
+    namespace: open-cluster-management
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
