--- a/clusters/cluster-pq7kv/apps/external-secrets-operator-app.yaml
+++ b/clusters/cluster-pq7kv/apps/external-secrets-operator-app.yaml
@@ -1,24 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: openshift-virtualization-instance
+  name: external-secrets-operator
   namespace: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "5"
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   project: default
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
-    # path:
-    # point to components/<component-name> if nothing needs to be patched
-    # point to clusters/<cluster-name>/patches/<component-name> to apply cluster specific patch
-    path: components/openshift-virtualization-instance
+    path: clusters/cluster-pq7kv/overlays/external-secrets-operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: openshift-cnv
+    namespace: external-secrets-operator
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
