--- a/clusters/cluster-pq7kv/overlays/compliance-operator copy/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/compliance-operator copy/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../../components/external-secrets-operator
+  - ../../../../components/compliance-operator
 
-patches:
+overlays:
   - path: patch-operator-policy.yaml
 
