--- a/clusters/cluster-pq7kv/apps/acm/acm-instance-app.yaml
+++ b/clusters/cluster-pq7kv/apps/acm/acm-instance-app.yaml
@@ -1,24 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: node-health-operators
+  name: acm-instance
   namespace: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "5"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: virt
+  project: default
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
     # path:
     # point to components/<component-name> if nothing needs to be patched
     # point to clusters/<cluster-name>/<component-name> to apply cluster specific patch
-    path: clusters/cluster-pq7kv/overlays/node-health-operators
+    path: components/acm/instance
   destination:
     server: https://kubernetes.default.svc
-    namespace: open-cluster-management-policies
+    namespace: open-cluster-management
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
