--- a/clusters/cluster-pq7kv/apps/external-secrets/external-secrets-operator-app.yaml
+++ b/clusters/cluster-pq7kv/apps/external-secrets/external-secrets-operator-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: compliance-operator
+  name: external-secrets-operator
   namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -10,10 +10,10 @@ spec:
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
-    path: clusters/cluster-pq7kv/overlays/compliance-operator # Points to local overlay
+    path: clusters/cluster-pq7kv/overlays/external-secrets/operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: open-cluster-management-policies
+    namespace: external-secrets-operator
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
