--- a/clusters/cluster-pq7kv/apps/node-health/node-health-operators-app.yaml
+++ b/clusters/cluster-pq7kv/apps/node-health/node-health-operators-app.yaml
@@ -1,24 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: openshift-virtualization-instance
+  name: node-health-operators
   namespace: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-wave: "0"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  project: virt
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
     # path:
     # point to components/<component-name> if nothing needs to be patched
     # point to clusters/<cluster-name>/<component-name> to apply cluster specific patch
-    path: components/openshift-virtualization-instance
+    path: clusters/cluster-pq7kv/overlays/node-health/operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: openshift-cnv
+    namespace: open-cluster-management-policies
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
