--- a/clusters/cluster-pq7kv/overlays/node-health/instance/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/node-health/instance/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../../components/node-health-instances
+  - ../../../../../components/node-health/instance
 
-overlays:
+patches:
   - path: patch-operator-instances.yaml
 
