--- a/clusters/cluster-pq7kv/overlays/node-health/operator/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/node-health/operator/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../../../components/node-health-operators
+  - ../../../../../components/node-health/operator
 
-overlays:
+patches:
   - path: patch-operator-policies.yaml
 
