--- a/clusters/cluster-pq7kv/overlays/node-health/instance/kustomization.yaml
+++ b/clusters/cluster-pq7kv/overlays/node-health/instance/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ../../../../../components/node-health/instance
 
 patches:
-  - path: patch-operator-instances.yaml
+  - path: patch-operator-instance.yaml
 
