--- a/clusters/cluster-pq7kv/apps/node-health/node-health-instances-app.yaml
+++ b/clusters/cluster-pq7kv/apps/node-health/node-health-instances-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: node-health-instances
+  name: node-health-instance
   namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
