--- a/clusters/cluster-pq7kv/apps/cluster-config/cluster-config-app.yaml
+++ b/clusters/cluster-pq7kv/apps/cluster-config/cluster-config-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-standards
+  name: cluster-config
   namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -15,7 +15,7 @@ spec:
     # path:
     # point to components/<component-name> if nothing needs to be patched
     # point to clusters/<cluster-name>/<component-name> to apply cluster specific patch
-    path: components/cluster-standards
+    path: clusters/cluster-pq7kv/overlays/cluster-config
   destination:
     server: https://kubernetes.default.svc
     namespace: open-cluster-management-policies
